css/gallery.css
#hero-gallery {
    display: flex;
    flex-wrap: wrap;
    gap: 15px;
    justify-content: center;
    padding: 20px;

    a {
        text-decoration: none;
    }

    .item-gallery {
        width: 480px;
        height: 480px;
        background-size: cover;
        background-position: center;
        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
        transition: transform 0.3s, box-shadow 0.3s;

        &.common {
            border-bottom: 4px solid var(--common);
        }

        &.rare {
            border-bottom: 4px solid var(--rare);
        }

        &.epic {
            border-bottom: 4px solid var(--epic);
        }

        &.legendary {
            border-bottom: 4px solid #ffa500;
        }

        &.mythic {
            border-bottom: 4px solid transparent;
            border-image: var(--mythic);
            border-image-slice: 1;
        }

        &.recolor::after {
            content: 'Recolor';
            float: right;
            padding: 2px 6px;
            background-color: rgba(0, 0, 0, 0.6);
            color: white;
            font-size: 20px;
            border-radius: 4px;
        }

        .item-name {
            color: white;
            text-shadow: 1px 1px 2px black;
            position: relative;
            top: 455px;
            left: 10px;
        }
    }

    .category-icon {
        height: 32px;
        padding: 5px;
        position: absolute;
    }


}

